--- a/Nevis14.csproj
+++ b/Nevis14.csproj
@@ -52,6 +52,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\FTD2XX_NET.dll</HintPath>
     </Reference>
+    <Reference Include="NationalInstruments.Common, Version=13.0.40.190, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
+    <Reference Include="NationalInstruments.VisaNS, Version=13.0.45.167, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -92,6 +94,7 @@
     <Compile Include="Ftdi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SCPI.cs" />
     <EmbeddedResource Include="ChipControl.resx">
       <DependentUpon>ChipControl.cs</DependentUpon>
     </EmbeddedResource>
