Chart Display Overhaul
Form now has a separate user control for charts

Minor fixes:
-FunctionGenerator now has default values for freq/amp
-FunctionGenerator "on" button now works and responds to 'apply' button
-Stopwatches removed
-ResultBox writes when certain actions are successful

--- a/Nevis14.csproj
+++ b/Nevis14.csproj
@@ -68,6 +68,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChartDisplay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChartDisplay.Designer.cs">
+      <DependentUpon>ChartDisplay.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChipControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -106,6 +112,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ChartDisplay.resx">
+      <DependentUpon>ChartDisplay.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChipControl.resx">
       <DependentUpon>ChipControl.cs</DependentUpon>
     </EmbeddedResource>
