--- a/Nevis14.csproj
+++ b/Nevis14.csproj
@@ -112,6 +112,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoltageDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VoltageDialog.Designer.cs">
+      <DependentUpon>VoltageDialog.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ChartDisplay.resx">
       <DependentUpon>ChartDisplay.cs</DependentUpon>
     </EmbeddedResource>
@@ -137,6 +143,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VoltageDialog.resx">
+      <DependentUpon>VoltageDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="FFTWSharp\obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
